Runtime update detector (#635)
* First approach to detecting runtime upgrades

* Support for canceling the wait for runtime upgrade

* Cleanup

* Move code from the example into the library

* Provide sync and async example

* Provide a sync example as well

* Use alloc instead of std

* Error handling and documentation

* Cleanup

* Update src/api/rpc_api/runtime_update.rs

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

* Update node-api/src/events/event_details.rs

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

* Update src/api/rpc_api/runtime_update.rs

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

* Update src/api/rpc_api/runtime_update.rs

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

* Do acual runtime update in example

* Add examples to tests

* Fix test

* Cleanup and documentation

* Cleanup

* Apply suggestions from code review

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

* Expand async example to also trigger a runtime update

* Only compile send_code_update_extrinsic in async compilation mode

* Incorporate review feedback

* Remove comment

---------

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,9 @@ jobs:
 
                 # Test for async compilation
                 cargo build --no-default-features --features "std jsonrpsee-client",
-                # Compile async example separately to enable async-mode
+                # Compile async examples separately to enable async-mode
                 cargo build --release -p ac-examples --example get_blocks_async --no-default-features,
+                cargo build --release -p ac-examples --example runtime_update_async --no-default-features,
 
                 # Clippy
                 cargo clippy --workspace --exclude test-no-std -- -D warnings,
@@ -152,6 +153,8 @@ jobs:
           pallet_balances_tests,
           pallet_transaction_payment_tests,
           state_tests,
+          runtime_update_sync,
+          runtime_update_async,
         ]
     steps:
       - uses: actions/checkout@v3
