--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
     "compose-macros",
     "examples/async",
     "examples/sync",
+    "examples/wasm",
     "node-api",
     "test-no-std",
     "testing/async",
