--- a/keystore/Cargo.toml
+++ b/keystore/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.10.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 license = "Apache-2.0"
 edition = "2021"
+repository = "https://github.com/scs/substrate-api-client"
+description = "Keystore (and session key management) for ed25519 based chains like Polkadot. (fork of sc-keystore)"
+readme = "README.md"
 
 [dependencies]
 array-bytes = "6.2"
