--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,20 @@ members = [
     "testing/sync",
 ]
 
+# Exclude the "test-no-std" package as it needs special treatment for compilation
+default-members = [
+    "api-client",
+    "keystore",
+    "compose-macros",
+    "primitives",
+    "examples/async",
+    "examples/sync",
+    "examples/wasm",
+    "node-api",
+    "testing/async",
+    "testing/sync",
+]
+
 [workspace.dependencies]
 # crates.io no_std
 async-trait = "0.1"
