Support 32 bit architectures (#478)
* Experiment with removing the u64 implementations in order to support 32 bit architectures

* Support encoding to u64 BitVec only if target architecture is 64 bit

* Remove commented test

* Remove unused use declaration

* Ensure in CI that code compiles for `wasm32-unknown-unknown`

* Add missing comma

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
                 cargo build --release -p test-no-std --features compose-macros,
                 cargo build --release -p test-no-std --features node-api,
 
+                # Test for 32 bit and wasm32-unknown-unknown compatibility
+                cargo build --target wasm32-unknown-unknown --no-default-features,
+            
                 # Clippy
                 cargo clippy --workspace --exclude test-no-std -- -D warnings,
                 cargo clippy --all-features --examples -- -D warnings,
