--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dev-dependencies]
 codec = { package = "parity-scale-codec", version = "3.2", features = ['derive'] }
 env_logger = "0.10.0"
+futures = "0.3.28"
 log = { version = "0.4.14" }
 serde_json = { version = "1.0.79" }
 tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "time"] }
@@ -25,4 +26,8 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "ma
 sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "..", features = ["tungstenite-client", "ws-client", "staking-xt", "contracts-xt"] }
+substrate-api-client = { path = "..", default-features = false, features = ["jsonrpsee-client", "tungstenite-client", "ws-client", "staking-xt", "contracts-xt"] }
+
+[features]
+default = ["sync-examples"]
+sync-examples = ["substrate-api-client/std", "substrate-api-client/sync-api"]
