Make `pallet-staking` and `pallet-contracts` dependencies optional (#522)
* Include `pallet-staking` dependency only when staking-xt feature is enabled

* Add missing newline

* Add feature for contracts

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -49,6 +49,6 @@ std = [
     "frame-system",
     "pallet-assets",
     "pallet-balances",
-    "pallet-contracts",
-    "pallet-staking",
 ]
+staking-xt = ["std", "pallet-staking"]
+contracts-xt = ["std", "pallet-contracts"]
