--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -25,4 +25,4 @@ sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "ma
 sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "..", features = ["tungstenite-client", "ws-client", "staking-xt"] }
+substrate-api-client = { path = "..", features = ["tungstenite-client", "ws-client", "staking-xt", "contracts-xt"] }
