--- a/compose-macros/Cargo.toml
+++ b/compose-macros/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 license = "Apache-2.0"
 edition = "2021"
 repository = "https://github.com/scs/substrate-api-client"
-description = "Macros for creating Substrate extrsinics and rpc calls"
+description = "Macros for creating Substrate extrinsics and rpc calls"
 readme = "README.md"
 categories = ["no-std"]
 
