--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -215,7 +215,7 @@ jobs:
           staking_batch_payout,
           subscribe_events,
           sudo,
-          unstable_rpc_api_calls,
+          new_json_rpc_api_calls,
           transfer_with_tungstenite_client,
           transfer_with_ws_client,
           author_tests,
