Add the version numbers of the different crates as well as the local path (#750)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,13 +59,13 @@ sp-version = { default-features = false, features = ["serde"], git = "https://gi
 frame-support = { optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-ac-compose-macros = { path = "compose-macros", default-features = false }
-ac-node-api = { path = "node-api", default-features = false }
-ac-primitives = { path = "primitives", default-features = false }
+ac-compose-macros = { path = "compose-macros", version = "0.5", default-features = false }
+ac-node-api = { path = "node-api", version = "0.6", default-features = false }
+ac-primitives = { path = "primitives", version = "0.9.1", default-features = false }
 
 
 [dev-dependencies]
-ac-node-api = { path = "node-api", features = ["mocks"] }
+ac-node-api = { path = "node-api", version = "0.6", features = ["mocks"] }
 kitchensink-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 scale-info = { version = "2.1.1", features = ["derive"] }
 test-case = "3.1.0"
