--- a/testing/sync/Cargo.toml
+++ b/testing/sync/Cargo.toml
@@ -12,5 +12,5 @@ sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "ma
 sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "../..", default-features = false, features = ["tungstenite-client", "ws-client"] }
+substrate-api-client = { path = "../..", version = "0.17", default-features = false, features = ["tungstenite-client", "ws-client"] }
 substrate-client-keystore = { path = "../../client-keystore" }
