--- a/examples/async/Cargo.toml
+++ b/examples/async/Cargo.toml
@@ -26,4 +26,4 @@ sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = 
 sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local deps
-substrate-api-client = { path = "../..", features = ["staking-xt", "contracts-xt"] }
+substrate-api-client = { path = "../..", version = "0.17", features = ["staking-xt", "contracts-xt"] }
