--- a/node-api/Cargo.toml
+++ b/node-api/Cargo.toml
@@ -36,7 +36,7 @@ sp-application-crypto = { default-features = false, features = ["full_crypto"], 
 sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 
 # local
-ac-primitives = { path = "../primitives", default-features = false }
+ac-primitives = { path = "../primitives", version = "0.9.1", default-features = false }
 
 [dev-dependencies]
 test-case = "3.1.0"
