Set license explicitly to Apache-2.0 and set SCS as author (#283)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "substrate-api-client"
 version = "0.6.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
+license = "Apache-2.0"
 edition = "2021"
 
 [workspace]
