--- a/client-keystore/Cargo.toml
+++ b/client-keystore/Cargo.toml
@@ -2,6 +2,7 @@
 name = "substrate-client-keystore"
 version = "0.6.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
+license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
