--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "ac-primitives"
 version = "0.1.0"
+authors = ["Supercomputing Systems AG <info@scs.ch>"]
+license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
