Create no_std example for extrinsic creation (#556)
* Start version of example

* Start moving code from Api into example

* Move more code into example

* Make some progress with types

* Cleanup

* Cleanup

* Documentation

* Some cleanup

* Make it compile again

* Use compose_call

* Create call differently

* Switch to using AssetTip

* Cleanup

* Cleanup

* Merge compose_extrinsic_offline into compose_extrinsic_no_std

* Incorporate review feedback

* Cleanup of merging of the two examples (compose_extrinsic_offline.rs and compose_extrinsic_no_std.rs)

* Just run both approaches to create an extrinsic

* Remove duplicated example

* Have only extrinsic related code in the construction blocks

* Apply suggestions from code review

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

* Move code below comment

---------

Co-authored-by: Bigna Härdi <bigna.h@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
         os: [ ubuntu-latest ]
         example: [
           benchmark_bulk_xt,
-          compose_extrinsic_offline,
+          compose_extrinsic,
           custom_nonce,
           check_extrinsic_events,
           get_account_identity,
