Fix nightly build job (#846)
* Add additional trait bounds that are now needed

* Update Cargo.lock

* webpki-root-certs changed its license to CDLA-Permissive-2.0

* Remove events that don't exist anymore

* Remove debug output

--- a/about.toml
+++ b/about.toml
@@ -5,7 +5,7 @@ accepted = [
     "BSD-2-Clause",
     "CC0-1.0",
     "BSD-3-Clause",
-    "MPL-2.0",
+    "CDLA-Permissive-2.0",
     "ISC",
     "OpenSSL",
     "Unicode-DFS-2016",
