Rename crate to ac-keystore (#754)
* Rename crate to ac-keystore

To be more consistent with the remaining crates

* Fix compilation error

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["no-std", "wasm"]
 [workspace]
 members = [
     ".",
-    "client-keystore",
+    "keystore",
     "compose-macros",
     "examples/async",
     "examples/sync",
