--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -29,6 +29,7 @@ pallet-staking = { optional = true, git = "https://github.com/paritytech/substra
 
 [dev-dependencies]
 node-template-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 [features]
 default = ["std"]
