Update to Substrate commit `7363dce` (#524)
* add weight to serde impls

* cargo update substrate

* fix clippy

* add workaround

* add workaround

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -19,6 +19,7 @@ sp-core = { default-features = false, git = "https://github.com/paritytech/subst
 sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-weights = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # substrate std / wasm only
 frame-system = { optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
