--- a/client-keystore/Cargo.toml
+++ b/client-keystore/Cargo.toml
@@ -6,8 +6,8 @@ license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
+array-bytes = "4.1"
 async-trait = "0.1.52"
-hex = "0.4.3"
 parking_lot = "0.12.0"
 serde_json = "1.0.79"
 
