no more --ws-external CMD in substrate 71d749c74e43c7a840c94fcbbdd2b0172a21d473 (#565)
Co-authored-by: echevrier <edith.chevrier@scs.ch>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,7 +156,7 @@ jobs:
 
       - name: Run latest node
         run: |
-          docker run -p 9944:9944 -p 9933:9933 -p 30333:30333 parity/substrate:latest --dev --ws-external --rpc-external &
+          docker run -p 9944:9944 -p 9933:9933 -p 30333:30333 parity/substrate:latest --dev --rpc-external &
 
       - name: Wait until node has started
         run: sleep 20s
