--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,6 +146,7 @@ jobs:
           transfer_with_ws_client,
           author_tests,
           chain_tests,
+          dispatch_errors_tests,
           frame_system_tests,
           pallet_balances_tests,
           pallet_transaction_payment_tests,
