Readd `KeystoreExt` to `LocalKeystore` (#585)
* readd keystoreExt

* add keystore test

* add tests

* fix seed

* simple test for KeystoreExt::generate()

---------

Co-authored-by: Sabine Proll <sabine.proll@scs.ch>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,6 +148,7 @@ jobs:
           chain_tests,
           dispatch_errors_tests,
           frame_system_tests,
+          keystore_tests,
           pallet_balances_tests,
           pallet_transaction_payment_tests,
           state_tests,
